added "under construction"

--- a/common/navbar.html
+++ b/common/navbar.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
+        <h2>ANAT HW</h2>
         <ul class="navbar">
-            <li>HOME</li>
-            <li>ABOUT</li>
-            <li>WORK</li>
-            <li>CONTACT</li>
+            <li><a href="/">HOME</a></li>
+            <li><a href="/work.html">WORK</a></li>
+            <li><a href="/contact.html">CONTACT</a></li>
+            <li><a href="/assets/Anat Hewari - CV 2022.pdf" 
+                download="Anat Hewari Resume" target="_blank">RESUME</a></li>
         </ul>
     </body>
 </html>
