--- a/work.html
+++ b/work.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Portfolio</title>
+        <title>Portfolio - Work</title>
         <script src="js/jquery-3.6.0.min.js"></script>
         <script src="js/scripts.js"></script>
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <div class="wip"></div>
+        <div class="nav_container"></div>
     </body>
 </html>
