--- a/home.html
+++ b/home.html
@@ -7,6 +7,6 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <div class="wip"></div>
+        <div class="nav-container"></div>
     </body>
 </html>
